# wasm-eval

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
benches/: instantiation.rs
benches/instantiation/: data_segments.wat  empty.wat  small_memory.wat
docker/: Makefile  check-update.sh
docker/base-wasm/: Dockerfile
docker/debian/buster/: Dockerfile
docker/debian/stretch/: Dockerfile
docker/emscripten/: README.md
docker/pytorch/: Dockerfile  README.md  requirements.txt
docker/wasm3/: Dockerfile
docker/wasmer/: Dockerfile
docker/wasmtime/: Dockerfile
src/onnc/: README.md
src/onnx/: README.md  super_resolution_with_onnxruntime.py
src/rust-ml/kmeans/: Cargo.toml
src/rust-ml/kmeans/data/: iris.data.csv  test.csv  train.csv
src/rust-ml/kmeans/src/: main.rs
src/rust-ml/linfa/: Cargo.toml  README.md
src/rust-ml/linfa/src/: main.rs
src/tvm/: Cargo.toml  build.rs  demo.py  kmeans.py  plot_mini_batch_kmeans.ipynb  singlestore_sagemaker_demo.ipynb
src/wasm/c_examples/: Makefile  copy.c  copy.wasm  fib.c
src/wasm/wasm_millis_to_seconds/: Cargo.toml
src/wasm3/: README.md  wasm_link.rs
src/wasmer/: Cargo.toml  README.md  main.rs
src/wasmer/src/: main.rs
src/wasmtime/copy/: Cargo.toml  Makefile
src/wasmtime/copy/src/: main.rs
src/xgboost/: README.md
