[package]
name = "wasm-graph"
version = "0.1.0"
authors = ["TVM Contributors"]
edition = "2018"
description = "WebAssembly graph to deep learning frameworks using TVM"
readme = "README.md"
repository = "https://github.com/apache/tvm"
license = "Apache-2.0"
keywords = ["wasm", "machine learning", "tvm"]

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ['cdylib']

[dependencies]
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.53"
ndarray = "0.12"
lazy_static = "1.1.1"
