[package]
name = "kmeans"
version = "0.1.0"
authors = ["Bailey Hayes <bhayes@singlestore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
ndarray = { version = "0.13.0", features = ["serde"] }
rand = "0.8.4"
rkm = { git = "https://github.com/second-state/wasm-learning-deps-rkm" }
