[package]
name = "code"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

[dependencies]
linfa = { version = "0.3.1", default-features = false }
linfa-logistic = { version = "0.3.1", default-features = false }
ndarray = { version = "0.13", default-features = false }
ndarray-csv = { version = "0.4", default-features = false }
csv = "1.1"
linfa-linear = { version = "0.4.0", default-features = false }
linfa-datasets = { version = "0.4.0", default-features = false }
